[tool.poetry]
name = "langchain-agent"
version = "0.1.0"
description = ""
authors = ["itsthomashere <thomasadam.leigh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
llama-index = "^0.9.21"
langchain = "^0.0.352"
streamlit = "^1.29.0"
openai = "^1.6.1"
streamlit-option-menu = "^0.3.6"
sqlalchemy = "^2.0.23"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
